// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb strands-agent-connection generator > should add rdb serve-local dependency to the agent prefixed serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#strands-agent",
        "name": "my-agent",
        "path": "src/my-agent",
        "protocol": "HTTP",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "my-agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb strands-agent-connection generator > should be idempotent for A2A agent.ts injection 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb strands-agent-connection generator > should be idempotent for agent.ts injection 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb strands-agent-connection generator > should fall back to agent-serve-local when no component name 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#strands-agent",
        "name": "agent",
        "path": "src/agent",
        "protocol": "HTTP",
      },
    ],
  },
  "name": "my-service",
  "root": "packages/my-service",
  "targets": {
    "agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb strands-agent-connection generator > should inject db into agent.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb strands-agent-connection generator > should inject db into agent.ts for A2A 1`] = `
"import { getPrisma as getDb } from 'db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const db = await getDb();
  db.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;

exports[`ts#rdb strands-agent-connection generator > should support multiple rdb connections in agent.ts 1`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { Agent, tool } from '@strands-agents/sdk';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({ a: z.number(), b: z.number() }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const mysqlDb = await getMysqlDb();
  mysqlDb.$on('error', console.error);
  const postgresDb = await getPostgresDb();
  postgresDb.$on('error', console.error);
  return new Agent({
    systemPrompt: 'You are a helpful assistant.',
    tools: [multiply],
  });
};
"
`;
